--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ rand = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 snap = { version = "0.2.3", optional = true }
-tokio = { version = "0.2", features = ["io-util"] }
+tokio = { version = "0.2", features = ["io-util", "rt-threaded", "macros"] }
 
 [dev-dependencies]
 md-5 = "0.8"
